doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Andrew\Dropbox\share
-d
C:\Users\Andrew\Dropbox\share\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Andrew\Dropbox\share\GUI.java
<---- end of javadoc command ---->
Loading source file C:\Users\Andrew\Dropbox\share\GUI.java...
Constructing Javadoc information...
Standard Doclet version 1.7.0
Building tree for all the packages and classes...
Generating C:\Users\Andrew\Dropbox\share\doc\GUI.html...
Generating C:\Users\Andrew\Dropbox\share\doc\package-frame.html...
Generating C:\Users\Andrew\Dropbox\share\doc\package-summary.html...
Generating C:\Users\Andrew\Dropbox\share\doc\constant-values.html...
Generating C:\Users\Andrew\Dropbox\share\doc\serialized-form.html...
C:\Users\Andrew\Dropbox\share\fl.java:96: error: invalid method declaration; return type required
    public FileList(File filelist) throws IOException
           ^
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Andrew\Dropbox\share\doc\allclasses-frame.html...
Generating C:\Users\Andrew\Dropbox\share\doc\allclasses-noframe.html...
Generating C:\Users\Andrew\Dropbox\share\doc\index.html...
Generating C:\Users\Andrew\Dropbox\share\doc\stylesheet.css...
1 error
